# haskell-data-mining

./: TODO  data-mining.cabal
presentation/: Makefile  presentation.lhs
src/Data/Mining/: Classification.hs  DataInterface.hs  Examples.hs  ItemSet.hs  Primitives.hs  Rules.hs  Utilities.hs
src/Data/Mining/Classification/: Class.hs  DecisionTree.hs
